Transfer repo from ome/ome-resources-monitor

--- a/dashboard.yml
+++ b/dashboard.yml
@@ -42,6 +42,7 @@
     - repo: ome/omero-dropbox
     - repo: ome/omero-marshal
     - repo: ome/omero-cli-render
+    - repo: ome/omero-cli-transfer
     - repo: ome/omero-figure
     - repo: ome/omero-scripts
     - repo: TheJacksonLaboratory/ezomero
@@ -50,6 +51,9 @@
 
   packages:
     - repo: ome/omero-iviewer
+    - repo: ome/omero-figure
+    - repo: German-BioImaging/omero-autotag
+    - repo: German-BioImaging/omero-tagsearch
 
 - name: OME Linked Data
 
